feat: refactor dialog boxes to reduce code duplication
