# src/Citadel.WebApi/Routes/Endpoints/Resources/Platforms/DeletePlatformsInput.cs
@@ -1,0 +1,8 @@
+using Application.Features.Platforms.Commands;
+
+namespace WebApi.Routes.Endpoints.Resources.Platforms;
+
+public sealed record DeletePlatformsInput(IEnumerable<Guid> Ids)
+{
+    internal DeletePlatforms ToCommand() => new(Ids);
+}
